<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/question_text_view"
        style="@style/CustomTextStyle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            style="@style/CustomButtonStyle"
            android:layout_marginEnd="15sp"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            style="@style/CustomButtonStyle"
            android:text="@string/false_button" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/cheat_button"
        style="@style/CustomButtonStyle"
        android:text="@string/cheat_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/previous_button"
            style="@style/CustomImageStyle"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_image_button_background"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/move_left" />

        <ImageButton
            android:id="@+id/next_button"
            style="@style/CustomImageStyle"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_image_button_background"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/move_right" />

    </LinearLayout>

</LinearLayout>

